<resources>
    <string name="app_name">FeedPal</string>
    <string name="form_email_username">Email or Username</string>
    <string name="form_password">Password</string>
    <string name="form_confirm_password">Confirm-Password</string>
    <string name="form_email">Email</string>
    <string name="form_username">Username</string>
    <string name="register_link">Don\'t have an account? Register</string>
    <string name="login_link">Already have an account? Login</string>

    <string name="button_login">LogIn</string>
    <string name="button_register">Register</string>
    <string name="button_logout">LogOut</string>

    <string name="server_ip">192.168.1.7</string>
    <string name="registration_url">http://%1$s/feedpalapp/register_user.php</string>
    <string name="login_url">http://%1$s/feedpalapp/login_user.php</string>
    <string name="logout_url">http://%1$s/feedpalapp/logout_user.php</string>
    <string name="fetch_user_url">http://%1$s/feedpalapp/get_user.php</string>

    <string name="usernamePlaceholder">Username@Example</string>
    <string name="emailPlaceholder">Username@Example.com</string>

    <string name="userNameHeader">Username: </string>
    <string name="emailHeader">Email: </string>
</resources>